--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,6 @@
   "name": "ionic4",
   "integrations": {},
   "type": "angular",
-  "pro_id": "2b769c46"
+  "pro_id": "2b769c46",
+  "id": "2b769c46"
 }
